# sdwan-qos-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
MSc AI-DA-AI Online Thesis Document/: Thesis_template.tex  grfext.sty  references.bib
MSc AI-DA-AI Online Thesis Document/Classes/: RoboticsLaTeX.cls
data/synthetic/: README.md
documents/: WORKLOG.ipynb  model_explanation.md  qos_classes.md
reports/model_results/: README.md  bnnupc_baseline_results.csv  bnnupc_baseline_results_feature_importance.csv  bnnupc_bronze_loss_classifier.csv  bnnupc_bronze_threshold_sweep.csv  bnnupc_log_delay_results.csv  bnnupc_log_delay_results_feature_importance.csv  bnnupc_loss_slice_evaluation_v2.csv  bnnupc_metric_slice_evaluation.csv  bnnupc_mlp_log_delay_results.csv  bnnupc_qos_allocation_recommendations.csv  bnnupc_qos_slice_bronze50.csv  bnnupc_qos_slice_bronze60.csv  bnnupc_qos_slice_bronze70.csv  bnnupc_qos_slice_evaluation.csv  bnnupc_qos_slice_evaluation_v2.csv  bnnupc_sla_bronze50.csv  (+6 more)
src/: clean_public_dataset.py  create_cicids_project_aligned_sample.py  evaluate_bnnupc_bronze_loss_classifier.py  evaluate_bnnupc_ft_transformer_slices.py  evaluate_bnnupc_metric_slices.py  evaluate_bnnupc_mlp_slices.py  evaluate_bnnupc_qos_slices.py  generate_bnnupc_dataset.py  generate_dataset.py  initial_data_set_exploration.py  plot_thesis_figures.py  process_bnnupc_dataset.py  process_public_dataset.py  process_zenodo_dataset.py  recommend_qos_allocation.py  train_baseline.py  train_bnnupc_ft_transformer.py  train_bnnupc_mlp.py  train_zenodo_baseline.py
(+5 files in other folders)
